--- a/index.html
+++ b/index.html
@@ -1,10 +1,14 @@
-<html>
+<html xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script  defer src="https://maps.googleapis.com/maps/api/js?libraries=places&language=en&key=AIzaSyDaqml-GXgNO5R6nO4g3X78HNjJ7TqeUPo"  type="text/javascript"></script>
+    <script type="text/javascript" src="/js/moment.js"></script>
+    <script defer src="https://maps.googleapis.com/maps/api/js?libraries=places&language=en&key=AIzaSyDaqml-GXgNO5R6nO4g3X78HNjJ7TqeUPo"  type="text/javascript"></script>
     <link href="//netdna.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/js/bootstrap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datetimepicker/4.17.47/js/bootstrap-datetimepicker.min.js"></script>
 </head>
 <body>
+
 <div class="container">
  <div class="row">
   <!--   <div class="jumbotron">
@@ -24,9 +28,34 @@
     <input id="destination" type="hidden" name="destination" required/>
     </div>
 
-    <input type="submit" value="Calculate" class="btn btn-primary"/>
+    <div class="row">
+        <div class='col-sm-6'>
+          <br><label>Pick Up Date/Time: </label>
+            <div class="form-group">
+
+                <div class='input-group date' id='datetimepicker1'>
+
+                    <input type='text' class="form-control" />
+                    <span class="input-group-addon">
+                        <span class="glyphicon glyphicon-calendar"></span>
+                    </span>
+
+                </div>
+            </div>
+        </div>
+
+
+        <script type="text/javascript">
+            $(function () {
+                $('#datetimepicker1').datetimepicker();
+            });
+        </script>
+    </div>
+
+      <input type="submit" value="Calculate" class="btn btn-primary"/>
 </form>
-<div id="result">
+
+<div id="result" hidden>
     <ul class="list-group">
         <li  class="list-group-item d-flex justify-content-between align-items-center">
             Distance (km):
@@ -36,14 +65,14 @@
 						Fare (NZ$):
 						<span id="fare_nzd" class="badge badge-primary badge-pill"></span>
 				</li>
-      <!--  <li  class="list-group-item d-flex justify-content-between align-items-center">
+      <li  class="list-group-item d-flex justify-content-between align-items-center">
             IN TEXT:
             <span id="duration_text" class="badge badge-primary badge-pill"></span>
         </li>
-        <li  class="list-group-item d-flex justify-content-between align-items-center">
+        <!-- <li  class="list-group-item d-flex justify-content-between align-items-center">
             IN MINUTES:
             <span id="duration_value" class="badge badge-primary badge-pill"></span>
-        </li>
+        </li> -->
 
         <li  class="list-group-item d-flex justify-content-between align-items-center">
             FROM:
@@ -52,9 +81,61 @@
         <li  class="list-group-item d-flex justify-content-between align-items-center">
             TO:
             <span id="to" class="badge badge-primary badge-pill"></span>
-        </li> -->
+        </li>
     </ul>
 </div>
+
+<form id="bookInfo" hidden>
+  <div class="row">
+
+    <div class="form-group row">
+    <label for="colFormLabel" class="col-sm-2 col-form-label">first name</label>
+    <div class="col-sm-10">
+      <input type="name" class="form-control" id="colFormLabel" placeholder="col-form-label">
+    </div>
+  </div>
+
+  <div class="form-group row">
+    <label for="colFormLabel" class="col-sm-2 col-form-label">Last name</label>
+    <div class="col-sm-10">
+      <input type="email" class="form-control" id="colFormLabel" placeholder="col-form-label">
+    </div>
+  </div>
+
+  <div class="form-group row">
+    <label for="colFormLabel" class="col-sm-2 col-form-label">Mobile</label>
+    <div class="col-sm-10">
+      <input type="name" class="form-control" id="colFormLabel" placeholder="Please add mobile number  ">
+    </div>
+  </div>
+
+  </div>
+
+  <div class="form-group row">
+    <label for="colFormLabel" class="col-sm-2 col-form-label">Email</label>
+    <div class="col-sm-10">
+      <input type="email" class="form-control" id="colFormLabel" placeholder="We'll never share your email with anyone else.">
+    </div>
+  </div>
+
+  <div class="form-group row">
+    <label for="colFormLabel" class="col-sm-2 col-form-label">Payment Option</label>
+    <div class="col-sm-10">
+      <select class="form-control form-control-sm">
+           <option>Bank/Poli</option>
+           <option>EFTPOS</option>
+           <option>Credit Card</option>
+           <option>Cash</option>
+      </select>
+    </div>
+   </div>
+
+   <div class="form-group">
+    <label for="exampleFormControlTextarea1">comments/instructions</label>
+    <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+  </div>
+
+</form>
 
 <!--<div class="cognito">
 <script src="https://services.cognitoforms.com/s/Ly2VJ20R40uD_9XkM3BRAA"></script>
