--- a/index.html
+++ b/index.html
@@ -3,10 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <title>Shuttle Booking System</title>
-  <!-- JQuery Libs -->
   <!-- Bootstrap -->
   <link href="https://netdna.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css" rel="stylesheet">
 </head>
 
 <body>
@@ -17,9 +16,9 @@
       <div class="col-sm-3">
         <form id="distance_form">
           <div class="form-group">
-            <input  id="from_places" class="form-control" placeholder="Enter a location" />
+            <input id="from_places" class="form-control" placeholder="Enter a location" />
             <input id="origin" type="hidden" name="origin" required />
-            </div>
+          </div>
             <div class="form-group">
               <label> Destination: </label>
               <input id="to_places" class="form-control" placeholder="Enter a location" />
@@ -41,7 +40,7 @@
         <!-- TODO:  visualize the rout or path chosen -->
         <div class="col-sm-4" id="map" style="height:50%"></div>
 
-        <div class="col-sm-5" id="result">
+        <div class="col-sm-5">
           <div class="panel panel-primary">
             <div class="panel-heading">
               <h4 class="panel-title">
@@ -52,42 +51,42 @@
       					</div>
     				</h4>
             </div>
-                <div class="panel-wrapper collapse in">
+                <div class="panel-wrapper collapse in" >
                   <form action="" id="preBooking">
-                  <div class="panel-body">
-                    <!-- TODO:  -->Primary panel to do add stuff inside
-                    <table class="table table-hover">
-                      <thead>
-                        <tr>
-                          <th scope="col">description</th>
-                          <th scope="col">Total</th>
-                          <th scope="col"></th>
-                        </tr>
-                      </thead>
-                      <tbody>
-                        <tr>
-                          <th scope="row">Distance (KM):</th>
-                          <td colspan="2"><span id='in_kilo' ></span></td>
-                        </tr>
-                        <tr>
-                          <th scope="row">Fare:</th>
-                          <td colspan="2"> <span id="fare_nzd" > </span> </td>
-                        </tr>
-                        <tr>
-                          <th scope="row">Duration:</th>
-                          <td colspan="2"> <span id="duration_text" ></span> </td>
-                        </tr>
-                        <tr>
-                          <th scope="row">From:</th>
-                          <td colspan="2"> <span id="from" ></span> </span> </td>
-                        </tr>
-                        <tr>
-                          <th scope="row">To: </th>
-                          <td colspan="2"> <span id="to" > </span> </td>
-                        </tr>
-                      </tbody>
-                    </table>
-                    <button type=“submit” id="bookNow" name="bookNow" value="Book Now" class="btn btn-primary btn-lg btn-block" />Book Now </button>
+                    <div id="result" class="panel-body">
+                      <!-- TODO:  -->Primary panel to do add stuff inside
+                      <table class="table table-hover">
+                        <thead>
+                          <tr>
+                            <th scope="col">description</th>
+                            <th scope="col">Total</th>
+                            <th scope="col"></th>
+                          </tr>
+                        </thead>
+                        <tbody>
+                          <tr>
+                            <th scope="row">Distance (KM):</th>
+                            <td colspan="2"><span id='in_kilo' ></span></td>
+                          </tr>
+                          <tr>
+                            <th scope="row">Fare:</th>
+                            <td colspan="2"> <span id="fare_nzd" > </span> </td>
+                          </tr>
+                          <tr>
+                            <th scope="row">Duration:</th>
+                            <td colspan="2"> <span id="duration_text" ></span> </td>
+                          </tr>
+                          <tr>
+                            <th scope="row">From:</th>
+                            <td colspan="2"> <span id="from" ></span> </span> </td>
+                          </tr>
+                          <tr>
+                            <th scope="row">To: </th>
+                            <td colspan="2"> <span id="to" > </span> </td>
+                          </tr>
+                        </tbody>
+                      </table>
+                      <button type=“submit” id="bookNow" name="bookNow" value="Book Now" class="btn btn-primary btn-lg btn-block" />Book Now </button>
                     </div>
                   </form>
                 </div>
@@ -122,7 +121,8 @@
           * the order generates an orderId Token that must be used to execute the Payment</p>
           <!-- buttons for movement and interaction -->
           <input type="button" name="previous" class="previous action-button" value="Previous" />
-          <input type="button" name="confirmBooking" class="next pay-button" value="Confirm Booking and Pay" />
+          <button id="add-order" class="pay-button">Confirm Booking and Pay </button>
+          <!-- <input type="button" name="confirmBooking" class="next pay-button" value="Confirm Booking and Pay" /> -->
         </fieldset>
         <fieldset>
           <h2 class="fs-title">Secured Payment</h2>
@@ -145,9 +145,14 @@
         </fieldset>
         </form>
       </div>
+      <!-- JQuery Libs -->
       <!-- Scripts Section -->
       <!-- Stripe Library <script type="text/javascript" src="js/stripecc.js"></script> -->
       <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+      <!-- &callback=myMap -->
+      <script src="https://maps.googleapis.com/maps/api/js?&key=AIzaSyDaqml-GXgNO5R6nO4g3X78HNjJ7TqeUPo&libraries=places" type="text/javascript"></script>
+      <script type="text/javascript" src="js/maps.js"></script>
+      <!-- <script src="https://maps.googleapis.com/maps/api/js?callback=myMap"></script> -->
       <script src="https://js.stripe.com/v3/"></script>
       <script src="js/stripecc.js"></script>
       <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js'></script>
@@ -164,9 +169,6 @@
       <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js'></script>
       <script src="js/index.js"></script>
       <!-- Google Maps Library -->
-      <script defer src="https://maps.googleapis.com/maps/api/js?&callback=myMap&libraries=places&language=en&key=AIzaSyDaqml-GXgNO5R6nO4g3X78HNjJ7TqeUPo" type="text/javascript"></script>
-      <script type="text/javascript" src="js/maps.js"></script>
-      <!-- <script src="https://maps.googleapis.com/maps/api/js?callback=myMap"></script> -->
 </body>
 
 </html>
