web task functions verified and added to source
payment function from webtask is not working.

--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
     <div>
       <form id="msform">
         <!-- progressbar -->
-        <ul id="progressbar">
+        <!-- <ul id="progressbar">
           <li class="active">Calculate shuttle Route</li>
           <li>Summary Quote for a shuttle create a booking and send email</li>
           <li>Customer Details for order</li>
           <li>Payment details</li>
-        </ul>
+        </ul> -->
         <!-- fieldsets -->
         <fieldset id="fieldsetRoute">
           <h2 class="fs-title">Calculate shuttle Route</h2>
@@ -133,7 +133,6 @@
       <fieldset>
           <h2 class="fs-title">Summary Quote for a shuttle create a booking and send email</h2>
           <h3 class="fs-subtitle">Details for your Booking</h3>
-
           <div id="summary">
             <!-- TODO:  Primary panel to do add stuff inside -->
             <table class="table table-hover">
@@ -177,7 +176,6 @@
                   <th scope="row">Estimated Duration:</th>
                   <td colspan="2"> <span id="durationSummary"></span> </td>
                 </tr>
-
               </tbody>
             </table>
           </div>
@@ -185,7 +183,7 @@
           <!-- buttons for movement and interaction -->
           <input type="button" name="previous" class="previous action-button" value="Previous" />
           <!-- <button id="add-order" class="pay-button">Confirm Booking and Pay </button> -->
-          <input type="button" name="confirmBooking" class="confirmBooking pay-button" value="Confirm Booking and Pay" />
+          <input type="button" name="confirmBooking" class="confirmBooking pay-button" value="Confirm Booking" />
         </fieldset>
         <fieldset>
           <h2 class="fs-title">Customer Details for order Secured Payment</h2>
