--- a/index.html
+++ b/index.html
@@ -216,6 +216,8 @@
   <!-- JQuery Libs -->
   <!-- Stripe Library <script type="text/javascript" src="js/stripecc.js"></script> -->
   <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+  <script src="https://cdn.snipcart.com/scripts/2.0/snipcart.js" id="snipcart" data-api-key="OTc2YjgyMWUtYmZjOC00OWYxLTlhZTktYmZmZWYwYzA0MDExNjM2NzYxNzY3OTI0ODIyMTcx"></script>
+  <link href="https://cdn.snipcart.com/themes/2.0/base/snipcart.min.css" type="text/css" rel="stylesheet" />
   <!-- Google Maps Library -->
   <!-- &callback=myMap -->
   <script src="https://maps.googleapis.com/maps/api/js?&key=AIzaSyDaqml-GXgNO5R6nO4g3X78HNjJ7TqeUPo&libraries=places"></script>
