--- a/index.html
+++ b/index.html
@@ -184,6 +184,16 @@
           <input type="button" name="previous" class="previous action-button" value="Previous" />
           <!-- <button id="add-order" class="pay-button">Confirm Booking and Pay </button> -->
           <input type="button" name="confirmBooking" class="confirmBooking pay-button" value="Confirm Booking" />
+<button
+			class="snipcart-add-item"
+			data-item-id="2"
+			data-item-name="Ticket"
+			data-item-price="3.00"
+			data-item-quantity="1"
+			data-item-url="https://flywayshuttles.co.nz/Ticket"
+			data-item-description="Ticket">
+			Buy Ticket
+		</button>
         </fieldset>
         <fieldset>
           <h2 class="fs-title">Customer Details for order Secured Payment</h2>
