--- a/index.html
+++ b/index.html
@@ -186,6 +186,7 @@
           <input type="button" name="confirmBooking" class="confirmBooking pay-button" value="Confirm Booking" />
 <button
 			class="snipcart-add-item"
+			id="Ticket"
 			data-item-id="2"
 			data-item-name="Ticket"
 			data-item-price="3.00"
