--- a/index.html
+++ b/index.html
@@ -189,6 +189,8 @@
 			id="Ticket"
 			data-item-id="2"
 			data-item-name="Ticket"
+			data-item-custom1-name="Number of Person"
+    			data-item-custom2-name="Distance per Person"
 			data-item-price="3.00"
 			data-item-quantity="1"
 			data-item-url="https://flywayshuttles.co.nz/Ticket"
