--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
     			data-item-custom2-name="Distance per Person"
 			data-item-price="3.00"
 			data-item-quantity="1"
-			data-item-url="https://flywayshuttles.co.nz"
+			data-item-url="/"
 			data-item-description="Ticket">
 			Buy Ticket
 		</button>
