--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
     			data-item-custom2-name="Distance per Person"
 			data-item-price="3.00"
 			data-item-quantity="1"
-			data-item-url="/"
+			data-item-url='/'
 			data-item-description="Ticket">
 			Buy Ticket
 		</button>
@@ -205,7 +205,7 @@
     			data-item-custom2-name="Distance per Person"
 			data-item-price="3.00"
 			data-item-quantity="1"
-			data-item-url="/"
+			data-item-url='/'
 			data-item-description="Ticket">
 			Buy Ticket
 		</button>
